Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19910

osd-ldiskfs: incorrect sign extension caused by integer overflow in some cases

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      In some cases (e.g. de->inode > 2^31 {-}1), the int variable (ino) is too small to save the vaule of de->inode so that extending it (ino) to unsigned long will result in various unexpected errors.

      lustre/osd-ldiskfs/osd_handler.c:
      static int osd_ea_lookup_rec(const struct lu_env *env, struct osd_object *obj,
                                   struct dt_rec *rec, const struct lu_name *ln)
      {
              struct inode *dir = obj->oo_inode;
              struct dentry *dentry;
              struct ldiskfs_dir_entry_2 *de;
              struct buffer_head *bh;
              struct lu_fid *fid = (struct lu_fid *)rec;
              struct htree_lock *hlock = NULL;
              int ino;
              int rc;
              ...
              bh = osd_ldiskfs_find_entry(dir, &dentry->d_name, &de, NULL, hlock);
              if (!IS_ERR(bh)) {
                      struct osd_thread_info *oti = osd_oti_get(env);
                      struct osd_inode_id *id = &oti->oti_id;
                      struct osd_device *dev = osd_obj2dev(obj);
                   
                      ino = le32_to_cpu(de->inode);
      
                      if (CFS_FAIL_CHECK(OBD_FAIL_FID_LOOKUP)) {
                              brelse(bh);
                              rc = osd_fail_fid_lookup(oti, dev, fid, ino);
                              GOTO(out, rc);
                      }
      
                      rc = osd_get_fid_from_dentry(de, rec);
              ...

            xyang Xiao Yang
            xyang Xiao Yang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: