LU-19910 osd-ldiskfs: Use __u32 for ino variable

Avoid incorrect sign extension caused by integer overflow.

Signed-off-by: Xiao Yang <xyang@ddn.com>
Change-Id: I585b31c2500979c67835d983ceab54d439c6943a
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64169
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Li Dongyang <dongyangli@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>